wxc/include/ewxw/wxc_glue.h

void       wxWindow_Freeze( TSelf(wxWindow) _obj );
void       wxWindow_GetAdjustedBestSize( TSelf(wxWindow) _obj, TSizeOutVoid(_w,_h) );
void*      wxWindow_GetHandle( TSelf(wxWindow) _obj );
int        wxWindow_Reparent( TSelf(wxWindow) _obj, TClass(wxWindow) _par );
void       wxWindow_SetScrollbar( TSelf(wxWindow) _obj, int orient, int pos, int thumbVisible, int range, TBool refresh );
void       wxWindow_Thaw( TSelf(wxWindow) _obj );