wxcl/src/windows/cffi/wxWindow.lisp


(defcfun ("wxWindow_GetHandle" wxWindow_GetHandle) :pointer
  (_obj :pointer))

(defcfun ("wxWindow_SetScrollbar" wxWindow_SetScrollbar) :void
  (_obj :pointer)
  (orient :int)
  (pos :int)
  (thumbVisible :int)
  (range :int)
  (refresh :int))

(defcfun ("wxWindow_Reparent" wxWindow_Reparent) :int
  (_obj :pointer)
  (_par :pointer))

(defcfun ("wxWindow_GetAdjustedBestSize" wxWindow_GetAdjustedBestSize) :void
  (_obj :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("wxWindow_Freeze" wxWindow_Freeze) :void
  (_obj :pointer))

(defcfun ("wxWindow_Thaw" wxWindow_Thaw) :void
  (_obj :pointer))
